<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_count_of_random_notes_task"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.macbook.ear4music.CountOfRandomNotesTaskActivity">

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:clipChildren="false"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true">

        <TextView
                android:text="@string/notes_count"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView1"/>
        <Spinner
                style="@style/spinner_wh"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerNoteCount"
                android:entries="@array/note_count_list"
                android:layout_marginStart="10dp"
                android:layout_gravity="fill_horizontal"
                android:layout_width="0dp"/>

        <TextView
                android:text="@string/notes_per_minute"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"/>
        <Spinner
                style="@style/spinner_wh"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerFreq"
                android:entries="@array/longitude_list_2"
                android:layout_marginStart="10dp"
                android:layout_gravity="fill_horizontal"
                android:layout_width="0dp"/>
        <TextView
                android:text="@string/show_note_names"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"/>
        <Switch
                style="@style/spinner_wh"
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:id="@+id/switchNoteNames"
                android:splitTrack="false"
                android:checked="true"
                android:layout_marginStart="10dp"
                android:layout_gravity="fill_horizontal"
                android:layout_width="0dp" android:paddingEnd="50dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:id="@+id/answerResult"
                android:layout_marginTop="10dp"/>
        <com.example.macbook.ear4music.widget.PianoKeyboard
                android:id="@+id/piano_keyboard"
                android:layout_height="150dp"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_width="0dp"/>
        <Button
                android:text="@string/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:id="@+id/buttonStart"
                android:onClick="onStartClick"/>
        <TextView
                android:lines="10"
                android:layout_width="match_parent"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:id="@+id/textViewResult" android:layout_height="wrap_content"/>
    </GridLayout>

</RelativeLayout>
